fixed charles small img and fixed facilitators icons being too big

--- a/css/creative.css
+++ b/css/creative.css
@@ -212,6 +212,19 @@ Hover Tests
     border: 7px solid #fff;
 }
 
+.ch-item-small {
+    width: 164px;
+    height: 164px;
+    border-radius: 50%;
+    overflow: hidden;
+    cursor: default;
+    /*box-shadow: inset 0 0 0 0 rgba(200, 95, 66, 0.4), inset 0 0 0 16px rgba(255, 255, 255, 0.6), 0 1px 2px rgba(0, 0, 0, 0.1);*/
+    transition: all 0.4s ease-in-out;
+    margin-left: auto;
+    margin-right: auto;
+    border: 7px solid #fff;
+}
+
 
 /*add background images*/
 
@@ -244,7 +257,7 @@ Hover Tests
 }
 
 .ch-img-8 {
-    background-image: url(http://www.supercamp.com/wp-content/uploads/2016/11/Charles3.jpg);
+    background-image: url(http://www.supercamp.com/wp-content/uploads/2016/11/Charles.jpg);
 }
 
 .ch-img-9 {
